# multitune

./: .gitignore  flake.nix  main.py  pyproject.toml
src/: __init__.py  dispatch.py  hf_dispatch.py  multitune.py  trainingConfig.py  unsloth_dispatch.py
